--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,44 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true
-	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+  "extends": "./.svelte-kit/tsconfig.json",
+  "include": ["src/*/*"],
+  "compilerOptions": {
+    "declaration": true,
+    "allowJs": true,
+    "target": "ES2021",
+    "lib": ["es2021", "DOM", "WebWorker", "DOM.Iterable", "EsNext" ],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "types": ["node"],
+    "paths": {
+      "~/*": ["./src/*"]
+    },
+    
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "compilerOptions": {
+      "declaration": true,
+      "allowJs": true,
+      "target": "ES2021",
+      "lib": ["es2021", "DOM", "WebWorker", "DOM.Iterable", "EsNext" ],
+      "module": "ESNext",
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "incremental": true,
+      "isolatedModules": true,
+      "outDir": "dist",
+      "types": ["node"],
+      "paths": {
+        "~/*": ["./src/*"]
+      }
+    }
+  }
 }
