--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-node": "^1.1.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.50",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -23,12 +25,15 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"tailwindcss": "^3.2.4",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.4",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@marmadilemanteater/gh-static-site-lib": "https://github.com/MarmadileManteater/gh-static-site-lib"
+		"@marmadilemanteater/gh-static-site-lib": "file:../gh-static-site-lib",
+		"highlight.js": "^11.7.0",
+		"sqlite3": "^5.1.4"
 	}
 }
