--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-	"name": "sveltekitsite",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-node": "^1.1.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.50",
-		"@sveltejs/kit": "^1.0.0",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"tailwindcss": "^3.2.4",
-		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@marmadilemanteater/gh-static-site-lib": "file:../gh-static-site-lib",
-		"highlight.js": "^11.7.0",
-		"sqlite3": "^5.1.4"
-	}
+  "name": "sveltekitsite",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-node": "^1.1.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.50",
+    "@sveltejs/kit": "^1.0.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.28.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.21",
+    "svelte": "^3.54.0",
+    "svelte-check": "^2.9.2",
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@marmadilemanteater/gh-static-site-lib": "file:../gh-static-site-lib",
+    "highlight.js": "^11.7.0",
+    "sqlite3": "^5.1.4"
+  },
+  "environment": "DEV"
 }
