--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "skipLibCheck": true,
       "incremental": true,
       "isolatedModules": true,
+      "resolveJsonModule": true,
       "outDir": "dist",
       "types": ["node"],
       "paths": {
