--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,14 @@ jobs:
         run: |
           cp ./sqllite3.db ./build
 
+      - name: 🤐 Zip up build directory for 🏎faster uploads
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -r build.zip ./build
+
       - name: 📦 Publish artifact
         uses: actions/upload-artifact@v3
         with:
           name: MarmadileManteaterSvelte
-          path: build/
+          path: build.zip
 
