--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,13 @@ jobs:
           cd node_modules/@marmadilemanteater/gh-static-site-lib
           yarn build
 
-      - name: 📄 Copy data/public to static
-        run: |
-          cp -r data/public static
-
       - name: 📰 Output RSS feed
         run: |
           npx ts-node ./src/scripts/write-xml-feed.ts
+
+      - name: 📄 Copy data/public to static
+        run: |
+          cp -r data/public static
 
       - name: 🧳 Package SQLite3 db
         run: |
@@ -56,7 +56,8 @@ jobs:
       - name: 🚚 Move node_modules into build files
         run: |
           cp -r node_modules ./build
-
+          cp package.json ./build
+        
       - name: 🤐 Zip up build directory for 🏎faster uploads
         uses: montudor/action-zip@v1
         with:
