--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "dependencies": {
     "@marmadilemanteater/gh-static-site-lib": "https://github.com/MarmadileManteater/gh-static-site-lib.git",
     "highlight.js": "^11.7.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "vite-imagetools": "^5.0.8"
   },
-  "environment": "DEV"
+  "environment": "DEV",
+  "adapter": "static"
 }
