--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: "20 0 * * *"
   push:
-    branches: [development]
+    branches: [development, test-ci]
 
 jobs:
   build:
