--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
       - name: 🤐 Zip up build directory for 🏎faster uploads
         uses: montudor/action-zip@v1
         with:
-          args: zip -r node-adadpter.zip ./build
+          args: zip -r node-adapter.zip ./build
 
       - name: 🤐 Zip up build directory for 🏎faster uploads
         uses: montudor/action-zip@v1
