--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
           yarn build
           mv build static-adapter
           mv static-adapter/not-found/index.html static-adapter/404.html
-          rm static-adapter/not-found
+          rm -r static-adapter/not-found
 
       - name: 🧳 Package SQLite3 db
         run: |
