Refactor and lint code to re	quire attributes to be multi line
and to moreso enforce single quote over double quote

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
           yarn build
           mv build static-adapter
           mv static-adapter/not-found/index.html static-adapter/404.html
+          sed -i 's@href="\.\./@href="\/@g' static-adapter/404.html
           rm -r static-adapter/not-found
 
       - name: 🧳 Package SQLite3 db
