--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "clean": "rimraf ./node_modules/.vite"
   },
   "devDependencies": {
-    "@liquify/prettify": "^0.5.5-beta.1",
     "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/adapter-static": "^2.0.3",
@@ -23,6 +22,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "htmltidy": "^0.0.6",
     "postcss": "^8.4.21",
     "svelte": "^3.58.0",
     "svelte-check": "^2.9.2",
