--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,10 +91,11 @@ jobs:
         run: |
           cp ./sqllite3.db ./build
 
-      #- name: 🚚 Move node_modules into build files
-      #  run: |
-      #    cp -r node_modules ./build
-      #    cp package.json ./build
+      - name: 🚚 Move node_modules into build files
+        run: |
+          cp package.json ./build
+          cd build
+          yarn --production
         
       - name: 🤐 Zip up build directory for 🏎faster uploads
         uses: montudor/action-zip@v1
