--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "@marmadilemanteater/gh-static-site-lib": "https://github.com/MarmadileManteater/gh-static-site-lib.git",
     "highlight.js": "^11.7.0",
-    "sqlite3": "^5.1.4",
+    "sharp": "^0.32.6",
+    "sqlite3": "^5.1.6",
     "vite-imagetools": "^5.0.8"
   },
   "environment": "DEV",
